--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
-# Python / venv
 .venv/
 __pycache__/
 *.pyc
-
-# Build artifacts
 build/
 dist/
-*.spec
-*.zip
-
-# Runtime dependencies
 bin/
 adb.exe
 AdbWinApi.dll
 AdbWinUsbApi.dll
-
-# Secrets / keys
 *adbkey*
 *.key
 *.pub
-
-# Source exclusion (intentional)
+# Source exclusion
 FirestickRemote.py
